Commit controladores y vistas CXC y CXP

--- a/ADMFacturar/Views/CXP/Detalles.cshtml
+++ b/ADMFacturar/Views/CXP/Detalles.cshtml
@@ -1,38 +1,18 @@
-﻿<!DOCTYPE html>
+﻿@using ADM.Models
+@model AbonoCXP
+
+@{
+    var abonos = ViewData["Abonos"] as List<AbonoCXP>;
+}
+
+<!DOCTYPE html>
 <html lang="en">
-<body>
+<head>
+    <meta charset="utf-8" />
+    <title>Detalles de Abonos</title>
     <link href="~/css/custom.css" rel="stylesheet" />
-    <script>
-        // Función para abrir la modal
-        function abrirModal(idModal) {
-            var modal = document.getElementById(idModal);
-            modal.style.display = "block";
-        }
-
-        // Cierra la modal cuando el usuario hace clic en el botón de cerrar (x)
-        var modals = document.getElementsByClassName("modal");
-        for (var i = 0; i < modals.length; i++) {
-            var modal = modals[i];
-            var closeButton = modal.getElementsByClassName("close")[0];
-            closeButton.onclick = function () {
-                modal.style.display = "none";
-            }
-        }
-
-        // Cierra la modal cuando el usuario hace clic fuera de ella
-        window.onclick = function (event) {
-            for (var i = 0; i < modals.length; i++) {
-                var modal = modals[i];
-                if (event.target == modal) {
-                    modal.style.display = "none";
-                }
-            }
-        }
-    </script>
-
-    <div class="w-full">
-    </div>
-
+</head>
+<body>
     <form>
         <div class="border-b border-gray-900/10 pb-12">
             <h2 class="text-base font-semibold leading-7 text-white">Detalle de Saldo de Documento</h2>
@@ -62,6 +42,13 @@
                 </div>
 
 
+                <div class="sm:col-span-2 sm:col-start-1">
+                    <label for="email" class="block text-sm font-medium leading-6 text-white">Vendedor</label>
+                    <div class="mt-2">
+                        <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;" disabled value="Mario Castillo">
+                    </div>
+                </div>
+
                 <div class="sm:col-span-2 ">
                     <label for="city" class="block text-sm font-medium leading-6 text-white">Total Factura</label>
                     <div class="mt-2">
@@ -79,107 +66,50 @@
             </div>
         </div>
     </form>
-
-    <!--                  Formulario                        -->
-
     <div class="w-full">
-        <p class="text-xl pb-3 flex items-center text-white">
-            <i class="fas fa-list mr-3"></i> Listado de Recibos
-        </p>
-        <div class="bg-white overflow-auto">
-            <table class="min-w-full bg-white border border-gray-300">
-                <thead class="bg-gray-900 text-white">
-                    <tr>
-                        <th class="text-center py-3">Recibo</th>
+        <div class="flex justify-between items-center bg-gray-800 text-white p-4 rounded-t-lg">
+            <h3 class="text-xl font-semibold"><i class="fas fa-list mr-3"></i> Detalles de Abonos</h3>
+        </div>
+
+        <div class="bg-white rounded-b-lg shadow-lg overflow-hidden">
+            <table class="min-w-full leading-normal">
+                <thead>
+                    <tr class="bg-gray-800 text-white">
+                        <th class="text-center py-3">Abono ID</th>
+                        <th class="text-center py-3">Documento</th>
+                        <th class="text-center py-3">Proveedor</th>
                         <th class="text-center py-3">Tipo Documento</th>
-                        <th class="text-center py-3">Monto</th>
-                        <th class="text-center py-3">Saldo Factura</th>
-                        <th class="text-center py-3">Acciones</th>
+                        <th class="text-center py-3">Total Deuda</th> 
+                        <th class="text-center py-3">Saldo Pendiente</th>
+                        <th class="text-center py-3">Monto Abonado</th>
                     </tr>
                 </thead>
-                <tbody class="text-center">
-                    <tr class="even:bg-gray-50 dark:even:bg-gray-900/50 lg:justify-center">
-                        <td class="p-3 border border-gray-300">
-                            <span class=" text-md font-medium px-2.5 py-0.5">240036</span>
-                        </td>
-                        <td class="p-3 border border-gray-300">Transferencia</td>
-                        <td class="p-3 border border-gray-300">₡200.000</td>
-                        <td class="p-3 border border-gray-300">₡100.000</td>
-                        <td class="p-3 border border-gray-300">
-                            <button class="btn btnEditar" title="Editar Abono" onclick="abrirModal('modalCrearAbono')">
-                                <svg class="svg-inline--fa fa-times fa-w-16" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="times" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d=" M410.3 231l11.3-11.3-33.9-33.9-62.1-62.1L291.7 89.8l-11.3 11.3-22.6 22.6L58.6 322.9c-10.4 10.4-18 23.3-22.2 37.4L1 480.7c-2.5 8.4-.2 17.5 6.1 23.7s15.3 8.5 23.7 6.1l120.3-35.4c14.1-4.2 27-11.8 37.4-22.2L387.7 253.7 410.3 231zM160 399.4l-9.1 22.7c-4 3.1-8.5 5.4-13.3 6.9L59.4 452l23-78.1c1.4-4.9 3.8-9.4 6.9-13.3l22.7-9.1v32c0 8.8 7.2 16 16 16h32zM362.7 18.7L348.3 33.2 325.7 55.8 314.3 67.1l33.9 33.9 62.1 62.1 33.9 33.9 11.3-11.3 22.6-22.6 14.5-14.5c25-25 25-65.5 0-90.5L453.3 18.7c-25-25-65.5-25-90.5 0zm-47.4 168l-144 144c-6.2 6.2-16.4 6.2-22.6 0s-6.2-16.4 0-22.6l144-144c6.2-6.2 16.4-6.2 22.6 0s6.2 16.4 0 22.6z" /></svg>
-                            </button>
-                            </Botton>
-                            <Botton class="btn btnEliminar" title="Eliminar Abono">
-                                <a asp-action="Detalles">
-                                    <svg class="svg-inline--fa fa-eye fa-w-16" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="eye" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z" /></svg>
-                                </a>
-                            </Botton>
-                        </td>
-                    </tr>
+                <tbody id="bodyTablaAbonos" class="text-gray-700">
+                    @if (abonos != null)
+                    {
+                        foreach (var abono in abonos)
+                        {
+                            <tr class="border-b border-gray-200 hover:bg-gray-100">
+                                <td class="py-3 text-center">@Html.DisplayFor(modelItem => abono.Numero_Recibo)</td>
+                                <td class="py-3 text-center">@Html.DisplayFor(modelItem => abono.FK_Documento)</td>
+                                <td class="py-3 text-center">@Html.DisplayFor(modelItem => abono.FK_Proveedor)</td>
+                                <td class="py-3 text-center">@Html.DisplayFor(modelItem => abono.Tipo_Documento)</td>
+                                <td class="py-3 text-center">@Html.DisplayFor(modelItem => abono.Monto)</td>
+                                <td class="py-3 text-center">@Html.DisplayFor(modelItem => abono.Saldo_Pendiente)</td>
+                                <td class="py-3 text-center">@Html.DisplayFor(modelItem => abono.Monto_Abonado)</td>
+
+                            </tr>
+                        }
+                    }
+                    else
+                    {
+                        <tr>
+                            <td colspan="4" class="text-center">No hay abonos disponibles.</td>
+                        </tr>
+                    }
                 </tbody>
             </table>
         </div>
     </div>
-
-    <!-- Final de Tabla -->
-    <!-- Modal de Editar Abono -->
-    <div id="modalCrearAbono" class="modal">
-        <div class="modal-content">
-            <form>
-                <div class="border-b border-gray-900/10 pb-12">
-                    <h2 class="text-base font-semibold leading-7 text-white">Gestión de Abonos</h2>
-                    <div class="mt-4 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
-
-                        <div class="sm:col-span-2 sm:col-start-1">
-                            <label for="region" class="block text-sm font-medium leading-6 text-white">Tipo de Documento</label>
-                            <div class="mt-2">
-                                <select class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px; height: 35px;">
-                                    <option>Transferencia</option>
-                                    <option>Efectivo</option>
-                                    <option>Cheque</option>
-                                    <option>Sinpe</option>
-                                </select>
-                            </div>
-                        </div>
-
-                        <div class="sm:col-span-2">
-                            <label for="region" class="block text-sm font-medium leading-6 text-white">Número de Recibo</label>
-                            <div class="mt-2">
-                                <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;" disabled value="240036">
-                            </div>
-                        </div>
-
-                        <div class="sm:col-span-2">
-                            <label for="region" class="block text-sm font-medium leading-6 text-white">Monto</label>
-                            <div class="mt-2">
-                                <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;" value="₡200.000">
-                            </div>
-                        </div>
-
-                        <div class="sm:col-span-2">
-                            <label for="region" class="block text-sm font-medium leading-6 text-white">Banco</label>
-                            <div class="mt-2">
-                                <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;" value="BNCR">
-                            </div>
-                        </div>
-
-
-                        <div class="sm:col-span-2">
-                            <label for="region" class="block text-sm font-medium leading-6 text-white">Número de Deposito</label>
-                            <div class="mt-2">
-                                <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;" value="0001110012">
-                            </div>
-                        </div>
-                        <div class="sm:col-span-2">
-                        </div>
-                        <button type="submit" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Guardar</button>
-                    </div>
-                </div>
-
-            </form>
-        </div>
-    </div>
-    <!-- Fin Modal -->
 </body>
 </html>
