--- a/ADMFacturar/Views/CXP/Abono.cshtml
+++ b/ADMFacturar/Views/CXP/Abono.cshtml
@@ -1,58 +1,146 @@
-﻿<link href="~/css/custom.css" rel="stylesheet" />
+﻿@using ADM.Models
+@model AbonoCXP
 
-<div class="w-full">
-</div>
+@{
+    var abonos = ViewData["Abonos"] as List<AbonoCXP>;
+}
 
-<form>
-    <div class="border-b border-gray-900/10 pb-12">
-        <h2 class="text-base font-semibold leading-7 text-white">Gestión de Abonos</h2>
-        <div class="mt-4 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ingreso de Abonos</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
+    <link href="~/css/custom.css" rel="stylesheet" />
+    <!-- SweetAlert2 CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" rel="stylesheet">
+</head>
+<body>
 
-            <div class="sm:col-span-2 sm:col-start-1">
-                <label for="region" class="block text-sm font-medium leading-6 text-white">Tipo de Documento</label>
-                <div class="mt-2">
-                    <select class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px; height: 35px;">
-                        <option>Transferencia</option>
-                        <option>Efectivo</option>
-                        <option>Cheque</option>
-                        <option>Sinpe</option>
-                    </select>
-                </div>
-            </div>
-
-            <div class="sm:col-span-2">
-                <label for="region" class="block text-sm font-medium leading-6 text-white">Número de Recibo</label>
-                <div class="mt-2">
-                    <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
-                </div>
-            </div>
-
-            <div class="sm:col-span-2">
-                <label for="region" class="block text-sm font-medium leading-6 text-white">Monto</label>
-                <div class="mt-2">
-                    <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
-                </div>
-            </div>
-
-            <div class="sm:col-span-2">
-                <label for="region" class="block text-sm font-medium leading-6 text-white">Banco</label>
-                <div class="mt-2">
-                    <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
-                </div>
-            </div>
-
-
-            <div class="sm:col-span-2">
-                <label for="region" class="block text-sm font-medium leading-6 text-white">Número de Deposito</label>
-                <div class="mt-2">
-                    <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
-                </div>
-            </div>
-            <div class="sm:col-span-2">
-          
-            </div>
-            <button type="submit" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Confirmar</button>
+    <form asp-action="CrearAbono" method="post" class="max-w-4xl mx-auto p-6 bg-gray-800 rounded-md" id="formcreate">
+        <div class="border-b border-gray-700 pb-6">
+            <h2 class="text-lg font-semibold leading-7 text-white">Creación de nuevo Abono</h2>
         </div>
-    </div>
+        <div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-2 lg:grid-cols-3">
 
-</form>
+            
+            <div>
+                <label for="FK_Documento" class="block text-sm font-medium text-gray-300">Documento</label>
+                <div class="mt-2">
+                    <input asp-for="FK_Documento" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500" >
+                </div>
+            </div>
+            <div>
+                <label for="FK_Proveedor" class="block text-sm font-medium text-gray-300">Proveedor</label>
+                <div class="mt-2">
+                    <input asp-for="FK_Proveedor" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500" readonly>
+                </div>
+            </div>
+            <div>
+                <label for="Monto_Abonado" class="block text-sm font-medium text-gray-300">Monto Abonado</label>
+                <div class="mt-2">
+                    <input asp-for="Monto_Abonado" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
+                </div>
+            </div>
+            <div>
+                <label for="Tipo_Documento" class="block text-sm font-medium text-gray-300">Tipo Documento</label>
+                <div class="mt-2">
+                    <input asp-for="Tipo_Documento" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
+                </div>
+            </div>
+            <div>
+                <label for="Banco" class="block text-sm font-medium text-gray-300">Banco</label>
+                <div class="mt-2">
+                    <input asp-for="Banco" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
+                </div>
+            </div>
+        </div>
+        <div class="mt-6 flex justify-end gap-x-4">
+            <input asp-for="FK_Usuario_Creacion" value="1" type="hidden" />
+            <input asp-for="FK_Usuario_Modificacion" value="1" type="hidden" />
+            <button type="submit" id="btnGuardar" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Guardar</button>
+            <button asp-action="Index" class="rounded-md bg-red-600 px-4 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 focus:ring-2 focus:ring-red-500">Cancelar</button>
+        </div>
+    </form>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script>
+        document.getElementById('btnGuardar').addEventListener('click', function (event) {
+            event.preventDefault(); // Detener el envío normal del formulario
+
+            // Validar campos requeridos
+            var fk_Documento = document.querySelector('[name="FK_Documento"]').value;
+            var fk_Proveedor = document.querySelector('[name="FK_Proveedor"]').value;
+            var montoAbonado = document.querySelector('[name="Monto_Abonado"]').value;
+            var tipoDocumento = document.querySelector('[name="Tipo_Documento"]').value;
+            var banco = document.querySelector('[name="Banco"]').value;
+
+            if (!fk_Documento || !fk_Proveedor || !montoAbonado || !tipoDocumento || !banco) {
+                // Mostrar mensaje de error con SweetAlert2 si no están completos los campos
+                Swal.fire({
+                    icon: 'error',
+                    title: 'Error',
+                    text: 'Por favor complete todos los campos requeridos.',
+                    confirmButtonColor: '#3085d6',
+                    cancelButtonColor: '#d33',
+                    confirmButtonText: 'OK'
+                });
+            } else {
+                // Crear objeto FormData con los datos del formulario
+                var formData = new FormData(document.getElementById('formcreate'));
+
+                // Enviar los datos al controlador utilizando fetch
+                fetch('/CXP/CrearAbono', {
+                    method: 'POST',
+                    body: formData
+                })
+                    .then(response => {
+                        if (response.ok) {
+                            return response.json(); // Convertir la respuesta a JSON
+                        } else {
+                            throw new Error('Error al guardar los datos');
+                        }
+                    })
+                    .then(data => {
+                        // Verificar el resultado del procedimiento almacenado
+                        if (data.message) {
+                            // Si hay un mensaje de éxito
+                            Swal.fire({
+                                icon: 'success',
+                                title: 'Guardado Correctamente',
+                                confirmButtonColor: '#3085d6',
+                                confirmButtonText: 'OK'
+                            }).then((result) => {
+                                // Redirigir a la página de índice de proveedores después de guardar
+                                window.location.href = '/CXP/Index';
+                            });
+                        } else {
+                            // Si hay un mensaje de error
+                            Swal.fire({
+                                icon: 'error',
+                                title: 'Error',
+                                text: data.error || 'Error al guardar los datos.',
+                                confirmButtonColor: '#3085d6',
+                                cancelButtonColor: '#d33',
+                                confirmButtonText: 'OK'
+                            });
+                        }
+                    })
+                    .catch(error => {
+                        // Mostrar mensaje de error con SweetAlert2 si hay un error en la solicitud
+                        Swal.fire({
+                            icon: 'error',
+                            title: 'Error',
+                            text: error.message || 'Error al guardar los datos.',
+                            confirmButtonColor: '#3085d6',
+                            cancelButtonColor: '#d33',
+                            confirmButtonText: 'OK'
+                        });
+                    });
+            }
+        });
+    </script>
+</body>
+</html>
