--- a/ADMFacturar/Views/CXP/Abono.cshtml
+++ b/ADMFacturar/Views/CXP/Abono.cshtml
@@ -24,11 +24,17 @@
         </div>
         <div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-2 lg:grid-cols-3">
 
-            
+            <div>
+                <label for="Numero_Recibo" class="block text-sm font-medium text-gray-300">Número Recibo</label>
+                <div class="mt-2">
+                    <input asp-for="Numero_Recibo" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
+                </div>
+            </div>
+
             <div>
                 <label for="FK_Documento" class="block text-sm font-medium text-gray-300">Documento</label>
                 <div class="mt-2">
-                    <input asp-for="FK_Documento" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500" >
+                    <input asp-for="FK_Documento" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
                 </div>
             </div>
             <div>
