--- a/ADMFacturar/Views/Articulos/Index.cshtml
+++ b/ADMFacturar/Views/Articulos/Index.cshtml
@@ -1,9 +1,12 @@
 ﻿@using ADM.Models
+@using Newtonsoft.Json
 @model Articulo
 
 @{
 	var articulos = ViewData["Articulos"] as List<Articulo>;
+	var articuloModel = new Articulo();  // Inicialización de un nuevo objeto Articulo
 }
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -91,9 +94,15 @@
 								@* <td class="p-3 border border-gray-300"> *@
 								<td>
 									<div class="flex justify-center space-x-2">
-										<a asp-action="ActualizarArticulo" asp-route-PK="@articulo.PK_Articulo" class="text-blue-600 hover:text-blue-900" title="Editar">
+										@* <a onclick="actualizarArticulo(@Html.Raw(articulo))" class="text-blue-600 hover:text-blue-900" title="Editar">
+											<i class="fas fa-edit"></i> nuevo
+										</a> *@
+
+										<!-- Modificación para envio de todos los parámetros -->
+										<a onclick="ActuVarArticulo('@articulo.PK_Articulo')" class="text-blue-600 hover:text-blue-900" title="Editar">
 											<i class="fas fa-edit"></i>
 										</a>
+
 										<form method="post" asp-action="DesactivarArticulo" class="desactivar-form">
 											<input type="hidden" name="PK_Articulo" value="@articulo.PK_Articulo">
 											<button type="submit" class="text-red-600 hover:text-red-900 bg-transparent border-none p-0" title="Desactivar">
@@ -116,89 +125,81 @@
 		</div>
 	</div>
 
-
 	<!--                  Modal de Crear Template                        -->
+	<!--Reducción de codigo realizando vista parcial
+		Ajuste 7/9/24 por Joseth Araya -->
 	<div id="modalCrearArticulo" class="modal">
 		<div class="modal-content">
-			<form asp-action="CrearArticulo" method="post" class="max-w-4xl mx-auto p-6 bg-gray-800 rounded-md" id="formcreate">
-				<div class="border-b border-gray-700 pb-6">
-					<h2 class="text-lg font-semibold leading-7 text-white">Creación de nuevo Artículo</h2>
-				</div>
-				<div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-2 lg:grid-cols-3">
-					<div>
-						<label for="PK_Articulo" class="block text-sm font-medium text-gray-300">Código Artículo</label>
-						<div class="mt-2">
-							<input asp-for="PK_Articulo" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
-						</div>
-					</div>
-					<div>
-						<label for="Descripcion" class="block text-sm font-medium text-gray-300">Descripción</label>
-						<div class="mt-2">
-							<input asp-for="Descripcion" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
-						</div>
-					</div>
-					<div>
-						<label for="Codigo_Barras" class="block text-sm font-medium text-gray-300">Código de Barras</label>
-						<div class="mt-2">
-							<input asp-for="Codigo_Barras" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
-						</div>
-					</div>
-					<div>
-						<label for="FK_Proveedor" class="block text-sm font-medium text-gray-300">Proveedor</label>
-						<div class="mt-2">
-							<select asp-for="FK_Proveedor" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
-								<option value="1">Proveedor 1</option>
-								<option value="2">Proveedor 2</option>
-								<option value="3">Proveedor 3</option>
-								<option value="4">Proveedor 4</option>
-								<option value="5">Proveedor 5</option>
-								<option value="6">Proveedor 6</option>
-							</select>
-						</div>
-					</div>
-					<div>
-						<label for="Cantidad" class="block text-sm font-medium text-gray-300">Cantidad</label>
-						<div class="mt-2">
-							<input asp-for="Cantidad" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
-						</div>
-					</div>
-					<div>
-						<label for="Costo" class="block text-sm font-medium text-gray-300">Costo</label>
-						<div class="mt-2">
-							<input asp-for="Costo" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
-						</div>
-					</div>
-					<div>
-						<label for="Precio" class="block text-sm font-medium text-gray-300">Precio</label>
-						<div class="mt-2">
-							<input asp-for="Precio" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
-						</div>
-					</div>
-					<div>
-						<label for="Estado" class="block text-sm font-medium text-gray-300">Estado</label>
-						<div class="mt-2">
-							<select asp-for="Estado" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
-								<option value="true">Activo</option>
-								<option value="false">Inactivo</option>
-							</select>
-						</div>
-					</div>
-				</div>
-				<div class="mt-6 flex justify-end gap-x-4">
-					<input asp-for="FK_Usuario_Creacion" value="1" type="hidden" />
-					<input asp-for="FK_Usuario_Modificacion" value="1" type="hidden" />
-					<button type="submit" id="btnGuardar" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Guardar</button>
-					<button asp-action="Index" class="rounded-md bg-red-600 px-2 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-600">Cancelar</button>
-				</div>
-			</form>
+			@Html.Partial("ArticulosPars/_CrearArticulo")
 		</div>
 	</div>
 	<!--                  Final Modal de Crear Tempalte                        -->
 	<!--                  Modal de Actualizar Template                        -->
+	<!--Reducción de codigo realizando vista parcial
+		Ajuste 7/9/24 por Joseth Araya -->
+	<div id="modalActualizarArticulo" class="modal">
+		<div class ="modal-content">
+			@Html.Partial("ArticulosPars/_ActualizarArticulo");
+		</div>
+	</div>
 	<!--                  Final Modal de Actualizar Tempalte                        -->
 
 	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 	<script>
+
+		/*funcion encargada de obtener y colocar los datos en la modal
+		incorporación 7/10/24 por Joseth Araya */
+		function ActuVarArticulo(PK) {
+			console.log("Respuesta   " + PK);
+			fetch(`/Articulos/ObtenerArt?PK=${PK}`, {
+				method: 'GET'
+			})
+				.then(response => {
+					if (response.ok) {
+						return response.json();
+					} else {
+						throw new Error('Error al obtener el artículo');
+					}
+				})
+				.then(data => {
+					console.log('Datos del artículo:', data);
+
+					//Asignación de datos al modal
+					document.getElementById('PKART').value = data.pK_Articulo;
+					console.log('Datos del PK:', data.pK_Articulo); //Pruebas de datos
+					document.getElementById('Descp').value = data.descripcion;
+					console.log('Datos del Descripcion:', data.descripcion); //Pruebas de datos
+					console.log('Datos del Cod:', data.codigo_Barras); //Pruebas de datos
+					document.getElementById('CodBarras').value = data.codigo_Barras;
+					document.getElementById('FKProveedor').value = data.fK_Proveedor.toString(); // Convertir a string si es necesario
+					document.getElementById('Cant').value = data.cantidad;
+					document.getElementById('cost').value = data.costo.toFixed(2); // Asegurar dos decimales
+					document.getElementById('Price').value = data.precio.toFixed(2); // Asegurar dos decimales
+					document.getElementById('State').value = data.estado.toString().toLowerCase(); // Convertir a string si es necesario
+
+					// Abrir el modal de actualización
+					openModal('modalActualizarArticulo');
+				})
+				.catch(error => {
+					// Mostrar mensaje de error con SweetAlert2 u otra forma
+					console.error('Error:', error);
+					Swal.fire({
+						icon: 'error',
+						title: 'Error',
+						text: 'Error al obtener los datos del artículo',
+						confirmButtonColor: '#3085d6',
+						cancelButtonColor: '#d33',
+						confirmButtonText: 'OK'
+					});
+				});
+		}
+
+		/*funcion encargada de abrir el modal
+		incorporación 6/10/24 por Joseth Araya */
+		function openModal(idModal) {
+			var modal = document.getElementById(idModal);
+			modal.style.display = "block";
+		}
 
 		// Función para mostrar modal de confirmación de desactivación
 		function mostrarConfirmacion(event) {
@@ -236,7 +237,6 @@
 
 		// Enlazar evento de input para el campo de nombre de artículo
 		document.getElementById('nombre_articulo').addEventListener('input', filtrarTabla);
-
 
 		document.getElementById('btnGuardar').addEventListener('click', function (event) {
 			event.preventDefault(); // Detener el envío normal del formulario
@@ -300,6 +300,138 @@
 					});
 			}
 		});
+
+		/*Inicio de validaci[on de boton actualizar
+			Actualización 10/7/24 por Joseth Araya 
+			Se modificaron los getElementId para obtener los datos correctos*/
+		document.getElementById('btnActualizar').addEventListener('click', function (event) {
+			event.preventDefault(); // Detener el envío normal del formulario
+
+			// Validar campos requeridos
+			var codigoArticulo = document.getElementById('PKART').value;
+			var descripcion = document.getElementById('Descp').value;
+			var codigoBarras = document.getElementById('CodBarras').value;
+			var proveedor = document.getElementById('FKProveedor').value;
+			var cantidad = document.getElementById('Cant').value;
+			var costo = document.getElementById('cost').value;
+			var precio = document.getElementById('Price').value;
+			var estado = document.getElementById('State').value;
+
+			if (!codigoArticulo || !descripcion || !codigoBarras || !proveedor || !cantidad || !costo || !precio || !estado) {
+				// Mostrar mensaje de error con SweetAlert2 si no están completos los campos
+				Swal.fire({
+					icon: 'error',
+					title: 'Error',
+					text: 'Por favor complete todos los campos requeridos.',
+					confirmButtonColor: '#3085d6',
+					cancelButtonColor: '#d33',
+					confirmButtonText: 'OK'
+				});
+			} else {
+				// Crear objeto FormData con los datos del formulario
+				var formData = new FormData(document.getElementById('formupdate'));
+
+				// Enviar los datos al controlador utilizando fetch
+				fetch('/Articulos/ActualizarArticulo', {
+					method: 'POST',
+					body: formData
+				})
+					.then(response => {
+						if (response.ok) {
+							// Mostrar mensaje de éxito con SweetAlert2
+							Swal.fire({
+								icon: 'success',
+								title: 'Actualizado Correctamente',
+								showConfirmButton: true,
+								confirmButtonColor: '#3085d6',
+								confirmButtonText: 'OK'
+							}).then((result) => {
+								// Redirigir a la página de índice de artículos después de guardar
+								window.location.href = '/Articulos/Index';
+							});
+						} else {
+							throw new Error('Error al guardar los datos');
+						}
+					})
+					.catch(error => {
+						// Mostrar mensaje de error con SweetAlert2
+						Swal.fire({
+							icon: 'error',
+							title: 'Error',
+							text: error.message,
+							confirmButtonColor: '#3085d6',
+							cancelButtonColor: '#d33',
+							confirmButtonText: 'OK'
+						});
+					});
+			}
+		});
+
+
+		// document.getElementById('btnActualizar').addEventListener('click', function (event) {
+		// 	event.preventDefault(); // Detener el envío normal del formulario
+
+		// 	// Validar campos requeridos
+		// 	var codigoArticulo = document.getElementById('PKART').value;
+		// 	var descripcion = document.getElementById('Descp').value;
+		// 	var codigoBarras = document.getElementById('Cod_Barras').value;
+		// 	var proveedor = document.getElementById('FKProveedor').value;
+		// 	var cantidad = document.getElementById('Cant').value;
+		// 	var costo = document.getElementById('cost').value;
+		// 	var precio = document.getElementById('Price').value;
+		// 	var estado = document.getElementById('State').value;
+
+		// 	if (!codigoArticulo || !descripcion || !codigoBarras || !proveedor || !cantidad || !costo || !precio || !estado) {
+		// 		// Mostrar mensaje de error con SweetAlert2 si no están completos los campos
+		// 		Swal.fire({
+		// 			icon: 'error',
+		// 			title: 'Error',
+		// 			text: 'Por favor complete todos los campos requeridos.',
+		// 			confirmButtonColor: '#3085d6',
+		// 			cancelButtonColor: '#d33',
+		// 			confirmButtonText: 'OK'
+		// 		});
+		// 	} else {
+		// 		// Crear objeto FormData con los datos del formulario
+		// 		var formData = new FormData(document.getElementById('formupdate'));
+
+		// 		// Enviar los datos al controlador utilizando fetch
+		// 		fetch('/Articulos/ActualizarArticulo', {
+		// 			method: 'POST',
+		// 			body: formData
+		// 		})
+		// 			.then(response => {
+		// 				if (response.ok) {
+		// 					// Mostrar mensaje de éxito con SweetAlert2
+		// 					Swal.fire({
+		// 						icon: 'success',
+		// 						title: 'Actualizado Correctamente',
+		// 						showConfirmButton: true,
+		// 						confirmButtonColor: '#3085d6',
+		// 						confirmButtonText: 'OK'
+		// 					}).then((result) => {
+		// 						// Redirigir a la página de índice de artículos después de guardar
+		// 						window.location.href = '/Articulos/Index';
+		// 					});
+		// 				} else {
+		// 					throw new Error('Error al guardar los datos');
+		// 				}
+		// 			})
+		// 			.catch(error => {
+		// 				// Mostrar mensaje de error con SweetAlert2
+		// 				Swal.fire({
+		// 					icon: 'error',
+		// 					title: 'Error',
+		// 					text: error.message,
+		// 					confirmButtonColor: '#3085d6',
+		// 					cancelButtonColor: '#d33',
+		// 					confirmButtonText: 'OK'
+		// 				});
+		// 			});
+		// 	}
+		// });
+
+
 		// <!-- Inicio Validación botón desactivar -->
 		document.querySelectorAll('.desactivar-form').forEach(function (form) {
 			form.addEventListener('submit', function (event) {
