--- a/ADMFacturar/Views/_ViewImports.cshtml
+++ b/ADMFacturar/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using ADMFacturar
 @using ADMFacturar.Models
 @using ADM.Models
+@using Newtonsoft.Json
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 <link href="~/css/custom.css" rel="stylesheet" />
